--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -13,3 +13,6 @@
   <%= image_tag user.icon.url(:thumb) %>
 <% end %>
 <br />
+<% if current_user.can_edit(project) %>
+  <%= link_to 'Edit', :action => "edit", :id => project.id %><br />
+<% end %>
