Added one more new line.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :navbar do %>
-  <%= render 'shared/navbar' %><br />
+  <%= render 'shared/navbar' %><br /><br />
 <% end %>
 <% content_for :me do %>
   <h3>=== Me ===</h3>
