--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="navbar">
-    <%= yield :navbar %>
+    <%= render 'shared/navbar' %><br /><br />
   </div>
   <div id="me">
     <%= yield :me %>
