--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,1 +1,5 @@
 <h1>Project#edit</h1>
+<%= form_for @project, :url => { :action => "update" }, :html => { :multipart => true } do |form| %>
+  <%= render 'form', :form => form, :edit => true %>
+  <%= form.submit "update" %>
+<% end %>
