--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,3 +1,150 @@
 // Place all the styles related to the projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@charset "UTF-8";
+
+a:link{
+        color: #000000;
+}
+a:visited{
+        color: #0000ff;
+}
+a:hover{
+        color: #ff0000;
+}
+a:active{
+        color: #ff0000;
+}
+table th tr{
+
+}
+body{
+        margin-top: 0px;
+}
+#wrapper{
+        background-image: url("common/background.png");
+        background-repeat: repeat-y;
+        width: 970px;
+        margin: 0 auto;
+}
+#navbar{
+        background-repeat: no-repeat;
+        width: 960px;
+        height: 40px;
+        margin-top: -16px;
+        margin-left: -35px;
+        position: fixed;
+}
+#navbar ul{
+        color: #ffffff;
+        width: 960px;
+        height: 40px;
+        list-style: none;
+}
+#navbar li{
+        width: 160px;
+        height: 40px;
+        float: left;
+	list-style: none;
+}
+.home a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: url("common/navbar.png");
+        background-position: 0px 0px;
+        background-repeat: no-repeat;
+        text-indent: -1000em;
+        text-decoration: none;
+}
+.home a:hover{
+        background-image:url("common/navbar.png");
+        background-position: 0px -80px;
+}
+.search a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: url("common/navbar.png");
+        background-position: -160px 0px;
+        background-repeat: no-repeat;
+        text-indent: -1000em;
+        text-decoration: none;
+}
+.search a:hover{
+        background-image:url("common/navbar.png");
+        background-position: -160px -80px;
+}
+.mylist a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: url("common/navbar.png");
+        background-position: -320px 0px;
+        background-repeat: no-repeat;
+        text-indent: -1000em;
+        text-decoration: none;
+}
+.mylist a:hover{
+        background-image:url("common/navbar.png");
+        background-position: -320px -80px;
+}
+.projects a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: url("common/navbar.png");
+        background-position: -480px -40px;
+        background-repeat: no-repeat;
+        text-indent: -1000em;
+        text-decoration: none;
+}
+.projects a:hover{
+        background-image:url("common/navbar.png");
+        background-position: -480px -80px;
+}
+.message a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: url("common/navbar.png");
+        background-position: -640px 0px;
+        background-repeat: no-repeat;
+        text-indent: -1000em;
+        text-decoration: none;
+}
+.message a:hover{
+        background-image:url("common/navbar.png");
+        background-position: -640px -80px;
+}
+.logout a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: url("common/navbar.png");
+        background-position: -800px 0px;
+        background-repeat: no-repeat;
+        text-indent: -1000em;
+        text-decoration: none;
+}
+.logout a:hover{
+        background-image:url("common/navbar.png");
+        background-position: -800px -80px;
+}
+#content .cols{
+	width: 90%;
+	margin: 0 auto;
+	padding-top: 40px;
+}
+#footer{
+        background-image: url("common/footer.png");
+        width: 960px;
+        height: 40px;
+        margin-left: 5px;
+        clear: left;
+}
+#footer .copyright{
+        color :#ffffff;
+        text-align: center;
+        padding-top: 10px;
+}
