--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,8 @@
-<div id="navbar">
-  <ul>
-    <li class="home"><a href="/home"><span>Home</span></a></li>
-    <li class="profile"><a href="/search"><span>Search</span></a></li>
-    <li class="search"><a href="/mylist"><span>MyList</span></a></li>
-    <li class="works"><a href="/projects"><span>Projects</span></a></li>
-    <li class="logout"><a href="/home/logout"><span>Logout</span></a></li>
-  </ul>
-</div>
+<ul>
+  <li class="home"><a href="/home"><span>home</span></a></li>
+  <li class="search"><a href="/search"><span>eearch</span></a></li>
+  <li class="mylist"><a href="/mylist"><span>mylist</span></a></li>
+  <li class="projects"><a href="/projects"><span>projects</span></a></li>
+  <li class="message"><a href="/projects"><span>message</span></a></li>
+  <li class="logout"><a href="/home/logout"><span>logout</span></a></li>
+</ul>
